rudimentärt stöd för tävling mot inspelad löpning
git-svn-id: svn://acro.nym.se/projekt@193 2a83244e-8797-45b3-a2fb-03eebcce663c

--- a/iPhone/Glint/trunk/Resources/SendFilesViewController.xib
+++ b/iPhone/Glint/trunk/Resources/SendFilesViewController.xib
@@ -8,7 +8,7 @@
 		<string key="IBDocument.HIToolboxVersion">353.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="4"/>
+			<integer value="1"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -64,15 +64,23 @@
 						<object class="NSMutableArray" key="IBUIItems">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="IBUIBarButtonItem" id="739294094">
+								<bool key="IBUIEnabled">NO</bool>
+								<string key="IBUITitle">Email</string>
 								<int key="IBUIStyle">1</int>
 								<reference key="IBUIToolbar" ref="815808078"/>
-								<int key="IBUISystemItemIdentifier">9</int>
+							</object>
+							<object class="IBUIBarButtonItem" id="467088996">
+								<bool key="IBUIEnabled">NO</bool>
+								<string key="IBUITitle">Race against</string>
+								<int key="IBUIStyle">2</int>
+								<reference key="IBUIToolbar" ref="815808078"/>
 							</object>
 							<object class="IBUIBarButtonItem" id="749465509">
 								<reference key="IBUIToolbar" ref="815808078"/>
 								<int key="IBUISystemItemIdentifier">5</int>
 							</object>
 							<object class="IBUIBarButtonItem" id="507206872">
+								<bool key="IBUIEnabled">NO</bool>
 								<int key="IBUIStyle">1</int>
 								<reference key="IBUIToolbar" ref="815808078"/>
 								<int key="IBUISystemItemIdentifier">16</int>
@@ -152,6 +160,46 @@
 					</object>
 					<int key="connectionID">15</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">emailButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="739294094"/>
+					</object>
+					<int key="connectionID">18</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">raceButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="467088996"/>
+					</object>
+					<int key="connectionID">19</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">trashButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="507206872"/>
+					</object>
+					<int key="connectionID">20</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="1037052815"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">21</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">raceAgainstFile:</string>
+						<reference key="source" ref="467088996"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">22</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -195,6 +243,7 @@
 							<reference ref="823197193"/>
 							<reference ref="259107372"/>
 							<reference ref="749465509"/>
+							<reference ref="467088996"/>
 						</object>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -228,6 +277,11 @@
 						<reference key="object" ref="749465509"/>
 						<reference key="parent" ref="815808078"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">17</int>
+						<reference key="object" ref="467088996"/>
+						<reference key="parent" ref="815808078"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -241,6 +295,7 @@
 					<string>11.IBPluginDependency</string>
 					<string>12.IBPluginDependency</string>
 					<string>16.IBPluginDependency</string>
+					<string>17.IBPluginDependency</string>
 					<string>4.IBPluginDependency</string>
 					<string>5.IBPluginDependency</string>
 					<string>6.IBPluginDependency</string>
@@ -250,7 +305,8 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>SendFilesViewController</string>
 					<string>UIResponder</string>
-					<string>{{244, 271}, {320, 480}}</string>
+					<string>{{328, 135}, {320, 480}}</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -281,7 +337,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">16</int>
+			<int key="maxID">22</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -294,6 +350,7 @@
 						<object class="NSMutableArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>deleteFile:</string>
+							<string>raceAgainstFile:</string>
 							<string>sendFile:</string>
 							<string>switchToGPSView:</string>
 						</object>
@@ -302,11 +359,25 @@
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
+							<string>id</string>
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">tableView</string>
-						<string key="NS.object.0">UITableView</string>
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSMutableArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>emailButton</string>
+							<string>raceButton</string>
+							<string>tableView</string>
+							<string>trashButton</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>UIBarButtonItem</string>
+							<string>UIBarButtonItem</string>
+							<string>UITableView</string>
+							<string>UIBarButtonItem</string>
+						</object>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
